infra/k8s/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: syntax-ingress
spec:
  ingressClassName: nginx
  rules:
    # - host: "stylewars.localhost"
    - http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: fe-service
                port:
                  number: 3000
    - host: "stylewars.stamford.dev"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: fe-service
                port:
                  number: 3000
    - host: "stylewars-be.localhost"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: be-service
                port:
                  number: 8080
    - host: "stylewars-be.stamford.dev"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: be-service
                port:
                  number: 8080
